# ohmy-miner

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SESSION_SUMMARY.md  build.sh  install.sh  setup-testnet.sh  start.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PROMPTS/: STRATUM.md
docs/: 00.md  ANALYSIS_REFERENCE_QHASH.md  ASYNC_PIPELINE_IMPLEMENTATION.md  CRITICAL_CONSENSUS_ISSUES.md  CRITICAL_CORRECTIONS_PLAN.md  CRITICAL_QHASH_BUGS.md  CUDA_IMPLEMENTATION_COMPLETE.md  CUDA_IMPLEMENTATION_PLAN.md  DOCUMENTATION_VALIDATION_REPORT.md  EXECUTIVE_SUMMARY.md  EXTRANONCE_SUBSCRIBE.md  IMPLEMENTATION_STATUS.md  INSTALL_CUQUANTUM.md  MILESTONE1_DOUBLE_PRECISION.md  OPTIMIZATION_ROADMAP.md  PHASE5_SUMMARY.md  PHASE_4B_GOLDEN_VECTORS.md  POOL_RESEARCH.md  POOL_TESTING_REPORT.md  PROJECT_STATUS.md  QTC_GOLDEN_VECTOR_EXTRACTION_PATCH.cpp  README.md  RECENT_WORK.md  RESUMO_EXECUTIVO.md  ROADMAP_V2.md  STRATUM_COMPLIANCE.md  TEMPORAL_FORKS_IMPLEMENTATION.md  TESTNET_SETUP.md  batching-analysis.md  cnot-optimization-failed.md  config.md  configuration.md  critical-discovery-cuquantum.md  cucomplex-types.md  cuda-implementation-decisions.md  cuda-performance-report.md  cuquantum-batching-optimization.md  cuquantum-integration.md  cuquantum-optimization-summary.md  gate-fusion-analysis.md  (+7 more)
docs/archive/: CUDA_IMPLEMENTATION_PLAN.md  DOCUMENTATION_VALIDATION_REPORT.md  README.md  STRATUM_COMPLIANCE.md  batching-analysis.md
include/: batched_quantum.cuh  circuit_generator.hpp  circuit_types.hpp  common.h  crypto_utils.h  crypto_utils.hpp  cuda_kernels.cuh  fixed_point.hpp  found_share.h  gpu_info.hpp  gpu_manager.h  ialgorithm.h  logger.h  miner.h  miner.hpp  miner_bridge.h  mining_job.h  monolithic_kernel.cuh  pool_connection.h  pool_connection.hpp  qhash-gate.h  qhash_algorithm.h  qhash_kernels.cuh  qhash_miner.h  quantum_kernel.cuh  sha256-hash.h  stats.h  thread_safe_queue.h
include/algo/sha/: sha256-hash.h
include/miner/: Config.hpp  Device.hpp  IAlgorithm.hpp  Plugin.h  device.hpp  endian_util.h  mining_context.h  net.hpp  net_types.hpp  pool_connection.h  stratum_v1.hpp  target_util.h
include/ohmy/: fixed_point.hpp  log.hpp
include/ohmy/cli/: args.hpp
include/ohmy/config/: loader.hpp  types.hpp  validator.hpp
include/ohmy/crypto/: difficulty.hpp  sha256.hpp  sha256_device.cuh  sha256d.hpp
include/ohmy/logging/: fmt_logger.hpp  logger.hpp
include/ohmy/mining/: batched_qhash_worker.hpp  fused_qhash_worker.hpp  qhash_worker.hpp  worker.hpp
include/ohmy/pool/: messages.hpp  mining_job.hpp  monitor.hpp  stratum.hpp  stratum_messages.hpp  work.hpp
include/ohmy/quantum/: batched_cuda_simulator.hpp  cpu_simulator.hpp  cuda_simulator.hpp  cuda_types.hpp  custatevec_backend.hpp  fixed_point.hpp  fused_backend.hpp  qhash_kernel.cu  simulator.hpp
include/ohmy/system/: cuda.hpp
include/quantum/: custatevec_backend.hpp  custatevec_batched.hpp  simulator.hpp  simulator_factory.hpp
src/: batched_quantum.cu  batched_quantum.cu.bak  circuit_generator.cpp  config.cpp  crypto_utils.cpp  cuda_kernels.cu  cuda_sha256d.cu  device.cpp  fixed_point.cpp  gpu_info.cpp  gpu_manager.cpp  main.cpp  miner.cpp  miner_bridge.cpp  monolithic_kernel.cu  net.cpp  pool_connection.cpp  qhash-custatevec.cpp  qhash-gate.c  qhash.c  qhash_algo.c  qhash_algorithm.cpp  qhash_kernels.cu  quantum_kernel.cu  sha256.c  stratum_v1.cpp
src/cli/: args.cpp
src/config/: loader.cpp  validator.cpp
src/crypto/: difficulty.cpp  sha256d.cpp
src/logging/: fmt_logger.cpp
src/mining/: batched_qhash_worker.cpp  fused_qhash_worker.cpp  qhash_worker.cpp
src/net/: pool_connection.cpp
src/pool/: job_monitor.cpp  messages.cpp  mining_job.cpp  stratum.cpp  stratum_client.cpp  stratum_messages.cpp  work_manager.cpp
src/quantum/: batched_cuda_simulator.cu  circuit.cpp  cpu_simulator.cpp  cuda_device.cu  cuda_kernels.cu  cuda_simulator.cu  custatevec_backend.cpp  custatevec_batched.cu  fpm_consensus_device.cuh  fused_backend.cpp  fused_kernels.cu  fused_qhash_kernel.cu  fused_rotations_kernel.cu  sha256_device.cuh  simulator_factory.cpp
src/system/: cuda.cpp
src/util/: fpm_cuda_port.h
tests/: CMakeLists.txt  README.md  benchmark_cnot_chain.cpp  benchmark_fusion.cpp  benchmark_nonce_batch.cpp  test_backend.cpp  test_batch_performance.cpp  test_circuit.cpp  test_cuda_backend.cpp  test_cuquantum_backend.cpp  test_cuquantum_batched.cpp  test_cuquantum_pauli_rotation.cpp  test_determinism.cpp  test_difficulty.cpp  test_fixed_point.cpp  test_fixed_point.cu  test_fpm_consensus.cu  test_fused_qhash_kernel.cu  test_main.cpp  test_performance_baseline.cpp  test_pipeline.cu  test_qhash.cpp  test_qhash_debug.cu  test_quantum.cu  test_quantum_simulator.cpp  test_sha256_device.cu  test_sha256_order.cu  test_sha256_standalone.cu  test_sha256d.cpp  test_stratum_messages.cpp  test_stratum_optional.cpp  test_temporal_forks.cpp  test_utils.cpp
tests/benchmark/: bench_sha256_device.cu
tests/config/: miner-badport.json  miner-invalid.json  miner-valid.json
tests/tools/: test_stratum_messages.cpp
tests/unit/: test_config_validator.cpp  test_mining_job.cpp  test_sha256_device.cu  test_stratum_messages.cpp
tools/: find_nonce.cpp  golden_extractor  golden_extractor.cpp
